GNOME Bugzilla – Bug 700243
gobject introspection based bindings cannot call some methods
Last modified: 2021-07-05 10:45:19 UTC
There are some name collisions on the g-i generated bindings: - Accessible.get_text and Text.get_text - Accessible.get_selection and Text.get_selection - Accessible.get_attributes and Text.get_attributes and Document.get_attributes - Text.get_attribute_value and Document.get_attribute_value (but these shouldn't be a problem) - Accessible.get_description and Action.get_description - Accessible.get_name and Action.get_name
This seems the at-spi equivalent to ATK bug 647482. Probably we should solve the problem at both modules at the same time. Complex at it means an API change.
Created attachment 244208 [details] [review] Proposed patch. Could you test this patch? I've made functions with new names for the functions with collisions, deprecating and annotating the old functions. Hopefully the bindings will behave as expected.
Created attachment 244210 [details] [review] Corresponding patch for pyatspi.
[Mass-resetting default assignee, see bug 705890. Please reclaim this bug report by setting the assignee to yourself if you still plan to work on this. Thanks!]
GNOME is going to shut down bugzilla.gnome.org in favor of gitlab.gnome.org. As part of that, we are mass-closing older open tickets in bugzilla.gnome.org which have not seen updates for a longer time (resources are unfortunately quite limited so not every ticket can get handled). If you can still reproduce the situation described in this ticket in a recent and supported software version, then please follow https://wiki.gnome.org/GettingInTouch/BugReportingGuidelines and create a new ticket at https://gitlab.gnome.org/GNOME/at-spi2-core/-/issues/ Thank you for your understanding and your help.