Rename various functions to avoid name collisions

Having functions with common suffixes (ie, atspi_text_get_attributes and
atspi_document_get_attributes) results in problems for language
bindings. Deprecating these functions in favor of functions with new
names to avoid these collisions.

https://bugzilla.gnome.org/show_bug.cgi?id=700243