atspi/atspi-document.h
@@ -47,9 +47,17 @@ struct _AtspiDocument
 
 gchar * atspi_document_get_locale (AtspiDocument *obj, GError **error);
 
+#ifndef ATSPI_DISABLE_DEPRECATED
 gchar * atspi_document_get_attribute_value (AtspiDocument *obj, gchar *attribute, GError **error);
+#endif
 
+gchar * atspi_document_get_document_attribute_value (AtspiDocument *obj, gchar *attribute, GError **error);
+
+#ifndef ATSPI_DISABLE_DEPRECATED
 GHashTable * atspi_document_get_attributes (AtspiDocument *obj, GError **error);
+#endif
+
+GHashTable * atspi_document_get_document_attributes (AtspiDocument *obj, GError **error);
 
 G_END_DECLS
 
